--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,9 @@
 <h2>商品一覧</h2>
 <div class="product">
- <div class="row">
+
   <% @products.each do |product| %>
+   <div class="row mt-20">
+ <div class='col m12 s12 center'>
     <% if product.image.present? %>
       <%= image_tag product.image_url %>
     <% else %>
@@ -17,6 +19,7 @@
         <%= product.display_price %>
       </p>
       <%= link_to "買い物かごに入れる", product %>
+     </div>
      </div>
     <hr/>
   </div>
