--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -9,7 +9,8 @@
   <%= @product.display_price %>
 </p>
 
-<div class='btn btn-small'>
+<%= link_to product_add_to_baskets_path(@product), method: :post do %>
+<div class='waves-effect waves-light btn-small'>
   買い物かごに入れる
 </div>
-
+<% end %>
