--- a/app/views/baskets/show.html.erb
+++ b/app/views/baskets/show.html.erb
@@ -3,5 +3,19 @@
     買い物かごの中身
   </h3>
   <ul class='collection with-header'>
+    <%= @products.each do |product| %>
+    <li class='collection-item'>
+     <%= product.name %>
+    </li>
   </ul>
+  <p class='right'>
+  <span><%= product.display_price %>
+  <%= link_to product_delete_in_baskets_path(product), method: :post, data: {confirm: '削除してもいいですか？'} do %>
+<span class='basket__delete'>×</span>
+<% end %>
+  </span>
+</p>
+
+      <% end %>
+      
 </div>
