--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -10,7 +10,9 @@
 </p>
 
 <%= link_to product_add_to_baskets_path(@product), method: :post do %>
-<div class='waves-effect waves-light btn-small'>
+<div class='btn btn-small'>
   買い物かごに入れる
 </div>
 <% end %>
+
+
