--- a/app/views/baskets/show.html.erb
+++ b/app/views/baskets/show.html.erb
@@ -1,21 +1,46 @@
 <div class='container'>
   <h3 class='center mb-30'>
-    買い物かごの中身
+    カート内の商品
   </h3>
-  <ul class='collection with-header'>
-    <%= @products.each do |product| %>
-    <li class='collection-item'>
-     <%= product.name %>
-    </li>
-  </ul>
+    <ul class='collection with-header'>
+        <%= @products.each do |product| %>
+          <li class='collection-item'>
+        <%= product.name %>
+      </li>
+    </ul>
   <p class='right'>
-  <span><%= product.display_price %>
-  <%= link_to product_delete_in_baskets_path(product), method: :post, data: {confirm: '削除してもいいですか？'} do %>
-<span class='basket__delete'>×</span>
+      <span><%= product.display_price %>
+  
+    <%= link_to product_delete_in_baskets_path(product), method: :post, data: {confirm: '削除してもいいですか？'} do %>
+    <span class='basket__delete'>×</span>
+      </p>
 <% end %>
   </span>
-</p>
-
       <% end %>
+    
+
+      <div class='basket__total-amount right'> 合計金額 <%= @total_price %> 円</div>
       
+
+  <%= form_tag charge_path do %>
+  <%= hidden_field_tag 'product_ids[]' %>
+  <article>
+    <% if flash[:error].present? %>
+      <div id="error_explanation">
+        <p><%= flash[:error] %></p>
+      </div>
+    <% end %>
+    
+  </article>
+        <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+          data-key="pk_test_Q95hNnEKVbKqpoaN4EfNscVH00TgRzit2S"
+          data-name="商品のお支払い"
+          data-description="クレジット決済"
+          data-amount="<%= @total_price %>"
+          data-locale="auto"
+          data-currency="jpy">
+        </script>
+<% end %>
+
 </div>
+
