fin_add_admin_account

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -18,7 +18,7 @@
       <p>
         <%= product.display_price %>
       </p>
-      <%= link_to "買い物かごに入れる", product %>
+      <%= link_to "詳細", product %>
      </div>
      </div>
     <hr/>
