--- a/app/views/admins/products/new.html.erb
+++ b/app/views/admins/products/new.html.erb
@@ -2,7 +2,7 @@
   新規商品の追加
 </h2>
 <div class='container'>
- <%= simple_form_for @product do |f| %>
+ <%= simple_form_for [:admins, @product] do |f| %>
   <%= f.input :name %>
   <%= f.input :description %>
   <%= f.input :price %>
