--- a/app/views/baskets/show.html.erb
+++ b/app/views/baskets/show.html.erb
@@ -23,12 +23,14 @@
       
 
   <%= form_tag charge_path do %>
-  <%= hidden_field_tag 'product_ids[]' %>
+  <% @products.each do |p| %>
+  <%= hidden_field_tag 'product_ids[]', p.id %>
   <article>
     <% if flash[:error].present? %>
       <div id="error_explanation">
         <p><%= flash[:error] %></p>
       </div>
+    <% end %>
     <% end %>
     
   </article>
