--- a/app/views/admins/dashboards/index.html.erb
+++ b/app/views/admins/dashboards/index.html.erb
@@ -1,1 +1,28 @@
-<h1>Dashboard</h1>
+<div class='container'>
+  <h2 class='center'>
+    管理者画面
+  </h2>
+  <div class='collection'>
+    <ul>
+      <li class='collection-item admin__collection-item'>
+        <span>
+          売上履歴
+          <span class='admin__sales ml-10'>
+            <%= @sales_current %>
+                        <%# <div class="btn white"></div> %>
+            <%= link_to '詳細', admins_sales_record_path %>
+          </span>
+        </span>
+      </li>
+      <li class='collection-item admin__collection-item'>
+        <span>
+          今月の売上
+          <span class='admin__sales ml-10'>
+            <%= @sales_total %>
+          </span>
+          <%= link_to '詳細', admins_sales_record_path(start_at: Time.current.beginning_of_month, end_at: Time.current.end_of_month) %>
+        </span>
+      </li>
+    </ul>
+  </div>
+</div>
