--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,8 @@
            </li>
          <% end %>
         </ul>
+               <i class="right material-icons">shopping_cart</i>
+
      </div>
    </nav>
     <%= yield %>
