--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,5 @@
 @import "materialize/components/color-variables";
-$primary-color: color("blue", "lighten-2") !default;
-$secondary-color: color("yellow", "base") !default;
+$primary-color: color("blue-grey", "lighten-1") !default;
+$secondary-color: color("teal", "lighten-3") !default;
 @import "materialize";
 @import "https://fonts.googleapis.com/icon?family=Material+Icons";
