--- a/app/views/baskets/show.html.erb
+++ b/app/views/baskets/show.html.erb
@@ -1,26 +1,20 @@
 <div class='container'>
-  <h3 class='center mb-30'>
-    カート内の商品
-  </h3>
+  <h3 class='center mb-30'>カート内の商品</h3>
     <ul class='collection with-header'>
-        <%= @products.each do |product| %>
-          <li class='collection-item'>
-        <%= product.name %>
-      </li>
-    </ul>
-  <p class='right'>
-      <span><%= product.display_price %>
-  
-    <%= link_to product_delete_in_baskets_path(product), method: :post, data: {confirm: '削除してもいいですか？'} do %>
-    <span class='basket__delete'>×</span>
-      </p>
-<% end %>
-  </span>
-      <% end %>
-    
+      <%= @products.each do |product| %>
+        <li class='collection-item'>
+          <%= product.name %>
+          <p class="right">
+            <span><%= product.display_price %></span>
+            <%= link_to product_delete_in_baskets_path(product), method: :post, data: {confirm: '削除してもいいですか？'} do %>
+              <span class="basket__delete">×</>
+            <% end %>
+          </p>
+        </li>
+        <% end %>
+      </ul>
 
       <div class='basket__total-amount right'> 合計金額 <%= @total_price %> 円</div>
-      
 
   <%= form_tag charge_path do %>
   <% @products.each do |p| %>
