--- a/app/views/layouts/admin_dashboards.html.erb
+++ b/app/views/layouts/admin_dashboards.html.erb
@@ -16,16 +16,9 @@
      <div class="nav-wrapper">
      <%= link_to '商品を追加', new_admins_product_path %>
        <ul class="right hide-on-med-and-down" id="nav-mobile">
-         <% if current_user.present? %>
-           <li>
-             <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
-           </li>
-         <% elsif current_admin.present? %>
-           <li>
-             <%= link_to 'ログアウト（アドミン）', destroy_admin_session_path, method: :delete %>
-           </li>
+         <% if current_admin.present? %>
+          <li><%= link_to 'ログアウト（アドミン）', destroy_admin_session_path, method: :delete %></li>
          <% end %>
-         
         </ul>
      </div>
    </nav>
