--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,9 @@
            </li>
          <% end %>
         </ul>
-               <i class="right material-icons">shopping_cart</i>
+              <%= link_to root_path, :method => :get do %>
+                <i class="right material-icons">home</i>
+              <% end %>
 
      </div>
    </nav>
