--- a/app/views/admins/dashboards/index.html.erb
+++ b/app/views/admins/dashboards/index.html.erb
@@ -1,22 +1,15 @@
 <div class='container'>
-  <h2 class='center'>
-    管理者画面
-  </h2>
+  <h2 class='center'>管理者画面</h2>
   <div class='collection'>
     <ul>
       <li class='collection-item admin__collection-item'>
-        <span>
-          売上履歴
-          <span class='admin__sales ml-10'>
-                        <%# <div class="btn white"></div> %>
+        <span>売上履歴<span class='admin__sales ml-10'>
             <%= link_to '詳細', admins_sales_record_path %>
           </span>
         </span>
       </li>
       <li class='collection-item admin__collection-item'>
-        <span>
-          今月の売上
-          <span class='admin__sales ml-10'>
+        <span>今月の売上<span class='admin__sales ml-10'>
             <%= @sales %>
           </span>
           <%= link_to '詳細', admins_sales_record_path(start_at: Time.current.beginning_of_month, end_at: Time.current.end_of_month) %>
