--- a/app/views/layouts/admin_products.html.erb
+++ b/app/views/layouts/admin_products.html.erb
@@ -15,14 +15,8 @@
       <nav>
      <div class="nav-wrapper">
        <ul class="right hide-on-med-and-down" id="nav-mobile">
-         <% if current_user.present? %>
-           <li>
-             <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
-           </li>
-         <% elsif current_admin.present? %>
-           <li>
-             <%= link_to 'ログアウト（アドミン）', destroy_admin_session_path, method: :delete %>
-           </li>
+         <% if current_admin.present? %>
+           <li><%= link_to 'ログアウト（アドミン）', destroy_admin_session_path, method: :delete %></li>
          <% end %>
         </ul>
 
