--- a/app/views/layouts/user_products.html.erb
+++ b/app/views/layouts/user_products.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Home</title>
+    <title>EcUp</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -28,7 +28,6 @@
               <%= link_to basket_path, :method => :get do %>
                 <i class="right material-icons">shopping_cart</i>
               <% end %>
-
      </div>
    </nav>
     <%= yield %>
