--- a/app/views/admins/dashboards/index.html.erb
+++ b/app/views/admins/dashboards/index.html.erb
@@ -18,3 +18,14 @@
     </ul>
   </div>
 </div>
+
+<% content_for :nav do %>
+  <%= link_to '商品を追加', new_admins_product_path %>
+  <ul class="right hide-on-med-and-down" id="nav-mobile">
+<% end %>
+
+<% content_for :nav02 do %>
+  <% if current_admin.present? %>
+    <li><%= link_to 'ログアウト（アドミン）', destroy_admin_session_path, method: :delete %></li>
+  <% end %>
+<% end %>
