--- a/app/views/layouts/_user_header.html.erb
+++ b/app/views/layouts/_user_header.html.erb
@@ -12,10 +12,10 @@
           <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
         <% end %>
         </ul>
-        <%= link_to basket_path, :method => :get do %>
+        <%= link_to baskets_path, :method => :get do %>
         <i class="right material-icons">shopping_cart</i>
         <% end %>
     </div>
   </nav>
   </head>
-        
+
