--- a/app/views/baskets/index.html.erb
+++ b/app/views/baskets/index.html.erb
@@ -5,12 +5,12 @@
           <% if basket.product %>
             <li class='collection-item'>
               <%= basket.product ? basket.product.name : ''%>
-              <p class="right">
+              <span class="right">
                 <span><%= basket.product.display_price %></span>
                 <%= link_to basket_path(basket.id), method: :delete, data: {confirm: '削除してもいいですか？'} do %>
                   <span class="basket__delete">×</>
                 <% end %>
-              </p>
+              </span>
             </li>
           <% end %>
         <% end %>
