--- a/app/views/layouts/___user_login.html.erb
+++ b/app/views/layouts/___user_login.html.erb
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <%= render 'layouts/user_header' %>
+  <head>
+    <title>EcApp</title>
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
+
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  </head>
   <body>
-     <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
-        <nav>
-          <div class="nav-wrapper">
-            <ul class="right hide-on-med-and-down" id="nav-mobile">
-          </div>
-        </nav>
+    <%= render 'layouts/user_header' %>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
     <%= yield %>
+    <%= render 'layouts/user_footer' %>
   </body>
-  <%= render 'layouts/user_footer' %>
 </html>
