--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <%= render 'layouts/user_header' %>
+  <head>
+    <title>EcApp</title>
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
+
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  </head>
   <body>
-     <p class="notice"><%= notice %></p>
-     <p class="alert"><%= alert %></p>
-     <%= yield %>
-     <%= render 'layouts/user_footer' %>
+    <%= render 'layouts/user_header' %>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+    <%= yield %>
+    <%= render 'layouts/user_footer' %>
   </body>
 </html>
