update css ver1

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,6 @@
 @import "materialize/components/color-variables";
-$primary-color: color("blue-grey", "lighten-1") !default;
-$secondary-color: color("teal", "lighten-3") !default;
+$primary-color: color("grey", "darken-3") !default;
+$secondary-color: color("grey", "darken-1") !default;
 @import "materialize";
 @import "https://fonts.googleapis.com/icon?family=Material+Icons";
 footer {
@@ -15,3 +15,14 @@ footer address {
     color: #313131;
     letter-spacing: 5px;
 }
+
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+// #site_name {
+//     text-align: left;
+//     color: #313131;
+// }
