--- a/app/views/admins/sales_records/_table.html.erb
+++ b/app/views/admins/sales_records/_table.html.erb
@@ -7,8 +7,8 @@
       </tr>
     </thead>
     <tbody>
-    <%= @purchase_record_products.each do |purchase_record_product| %>
-       <%= product = purchase_record_product.product %>
+    <% @purchase_record_products.each do |purchase_record_product| %>
+       <% product = purchase_record_product.product %>
        <tr>
         <td><%= product.name %></td>
         <td><%= product.display_price %></td>
