--- a/app/views/baskets/index.html.erb
+++ b/app/views/baskets/index.html.erb
@@ -1,5 +1,5 @@
 <div class='container'>
-  <h3 class='center mb-30'>カート内の商品</h3>
+  <h3 class='center mb-30'>カート内商品</h3>
     <ul class='collection with-header'>
         <% current_user.baskets.each do |basket| %>
           <% if basket.product %>
