--- a/app/views/layouts/_admin_footer.html.erb
+++ b/app/views/layouts/_admin_footer.html.erb
@@ -1,3 +1,3 @@
-<footer>
-  <address>Copyright(C)2019年 studio July,Allright Reserved.</address>
+ <footer class="footer-copyright transparent">
+  <address>Copyright(C)2019 studio greenpoint,Allright Reserved.</address>
 </footer>
