--- a/app/views/layouts/_admin_header.html.erb
+++ b/app/views/layouts/_admin_header.html.erb
@@ -1,7 +1,10 @@
-    <nav>
-     <div class="nav-wrapper">
-       <%= yield(:nav) %>
-       <%= yield(:nav02) %>
-        </ul>
-     </div>
-   </nav>
+<nav>
+  <div class="nav-wrapper">
+      <img src="/logo01.png" alt="Liruu design" width="45" height="auto" hspace="15" vspace="11"/>
+  <a href="/admins" class="brand-logo">park gallery</a>
+    <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <li><%= yield(:nav) %></li>
+      <li><%= yield(:nav02) %></li>
+    </ul>
+  </div>
+</nav>
