--- a/app/views/layouts/_user_header.html.erb
+++ b/app/views/layouts/_user_header.html.erb
@@ -1,12 +1,18 @@
   <nav>
     <div class="nav-wrapper">
+    <img src="/logo01.png" alt="Liruu design" width="45" height="auto" hspace="15" vspace="11"/>
+    <a href="/" class="brand-logo">park gallery</a>
       <ul class="right hide-on-med-and-down" id="nav-mobile">
+      <%# <h3 id="site_name">park gallery</h3> %>
         <% if current_user.present? %>
+         <li><%= link_to baskets_path, :method => :get do %>
+          <i class="right material-icons">shopping_cart</i>
+        <% end %></li>
           <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
+          <% else %>
+          <li><%= link_to 'ログイン', new_user_session_path %></li>
         <% end %>
         </ul>
-        <%= link_to baskets_path, :method => :get do %>
-        <i class="right material-icons">shopping_cart</i>
-        <% end %>
     </div>
   </nav>
+
