--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -4,9 +4,9 @@
     <title>EcApp</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= favicon_link_tag('favicon.ico') %>
   </head>
   <body>
     <%= render 'layouts/user_header' %>
