update css ver2

--- a/app/views/baskets/index.html.erb
+++ b/app/views/baskets/index.html.erb
@@ -35,8 +35,10 @@
           data-name="商品のお支払い"
           data-description="クレジット決済"
           data-amount="<%= @total_price %>"
-          data-locale="auto"
+          data-label="カード支払い"
+          data-locale="ja"
           data-currency="jpy">
+          
         </script>
 <% end %>
 
