--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -22,7 +22,7 @@
     </div>
   </nav>
     <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <%# <p class="alert"><%= alert %></p> 
     <%= yield %>
     <br>
     <br>
