update_footer_seed

--- a/app/assets/stylesheets/admins/application.scss
+++ b/app/assets/stylesheets/admins/application.scss
@@ -18,3 +18,13 @@ footer address {
     color: #313131;
     letter-spacing: 5px;
 }
+
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+main {
+    flex: 1 0 auto;
+}
