--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,7 +22,6 @@ body {
     flex-direction: column;
 }
 
-// #site_name {
-//     text-align: left;
-//     color: #313131;
-// }
+main {
+    flex: 1 0 auto;
+}
