--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -10,10 +10,12 @@
     <%= favicon_link_tag('favicon.ico') %>
   </head>
   <body>
+    <main>
     <%= render 'layouts/admin_header' %>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= yield %>
+      </main>
     <%= render 'layouts/admin_footer' %>
   </body>
 </html>
