--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,3 +1,13 @@
+  <head>
+    <title>EcApp</title>
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= favicon_link_tag('favicon.ico') %> 
+  </head>
+
+<center>
 <%= image_tag(@product.image.url || "sample.png") %>
 <p>
   <%= @product.name %>
@@ -14,3 +24,6 @@
   買い物かごに入れる
 </div>
 <% end %>
+<br/>
+<br/>
+</center>
