--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -2,7 +2,7 @@
   <div class="col s12">
     <div class="card hoverable">
       <div class="card-content">
-        <span class="card-title center">Resend Confirmation Instructions</span>
+        <span class="card-title center">確認メール</span>
         <div class="divider"></div>
         <%= form_for resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post } do |f| %>
           <% if devise_error_messages? || alert %>
@@ -20,7 +20,7 @@
             </div>
           </div>
           <div class="form-actions center">
-            <%= f.submit "Resend Confirmation Instructions", class: "btn wave-effects" %>
+            <%= f.submit "確認メールの送信", class: "btn wave-effects" %>
           </div>
         <% end %>
       </div>
