--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
   <div class="col s12">
     <div class="card hoverable">
       <div class="card-content">
-        <span class="card-title center">Sign Up</span>
+        <span class="card-title center">アカウント作成</span>
         <div class="divider"></div>
         <%= form_for resource, as: resource_name, url: registration_path(resource_name) do |f| %>
           <% if devise_error_messages? || alert %>
@@ -33,7 +33,7 @@
             </div>
           </div>
           <div class="form-actions center">
-            <%= f.submit "Sign Up", class: "btn waves-effect" %>
+            <%= f.submit "アカウント作成", class: "btn waves-effect" %>
           </div>
         <% end %>
       </div>
