--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -23,8 +23,8 @@
   </nav>
     <p class="notice"><%= notice %></p>
     <%= yield %>
-    <br>
-    <br>
+    <main>
+  </main>
     <%= render 'layouts/user_footer' %>
   </body>
 </html>
