--- a/app/views/baskets/index.html.erb
+++ b/app/views/baskets/index.html.erb
@@ -8,7 +8,7 @@
               <span class="right">
                 <span><%= basket.product.display_price %></span>
                 <%= link_to basket_path(basket.id), method: :delete, data: {confirm: '削除してもいいですか？'} do %>
-                  <span class="basket__delete">×</>
+                  <span class="basket__delete">&nbsp;&nbsp;<i class="far fa-trash-alt"></i></>
                 <% end %>
               </span>
             </li>
@@ -30,15 +30,15 @@
     <% end %>
 
   </article>
+  <br>
         <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
           data-key="pk_test_Q95hNnEKVbKqpoaN4EfNscVH00TgRzit2S"
           data-name="商品のお支払い"
           data-description="クレジット決済"
           data-amount="<%= @total_price %>"
-          data-label="カード支払い"
+          data-label="商品のお支払い"
           data-locale="ja"
           data-currency="jpy">
-          
         </script>
 <% end %>
 
