--- a/app/views/layouts/user.html.erb
+++ b/app/views/layouts/user.html.erb
@@ -7,6 +7,7 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= favicon_link_tag('favicon.ico') %>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|Armata|Fira+Code&display=swap" rel="stylesheet">
   </head>
   <body>
