--- a/app/views/admins/dashboards/index.html.erb
+++ b/app/views/admins/dashboards/index.html.erb
@@ -21,7 +21,8 @@
 </div>
 
 <% content_for :nav do %>
-  <%= link_to '商品を追加', new_admins_product_path %>
+   <li><%= link_to '商品を追加', new_admins_product_path %></li>
+   <li><%= link_to '商品の削除', admins_products_path %></li>
 <% end %>
 
 <% content_for :nav02 do %>
