--- a/app/views/admins/products/index.html.erb
+++ b/app/views/admins/products/index.html.erb
@@ -16,7 +16,7 @@
             <p><% product.description.size  %></p>
             <p><%= product.display_price %></p>
             <hr/>
-            <%= link_to "削除", admins: :products,  method: :delete, :class => "waves-effect waves-light btn" %>
+            <%= link_to "削除", admins_product_path(product),  method: :delete, :class => "waves-effect waves-light btn" %>
           </div>
           <br>
     </div>
