--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -14,7 +14,17 @@
             <h5 class="card-title"><%= product.name %></h5>
             <p><%= if product.description.size > 16 then product.description[0,16] + '..' else product.description end %></p>
             <p><% product.description.size  %></p>
-            <p><%= product.display_price %></p>
+            <p>
+            <%= product.display_price %>
+              <% if user_signed_in? %>
+                <% if product.favorited_by?(current_user) %> 
+                    <i class="right material-icons">favorite<%=link_to product.favorites.count, product_favorites_path(product.id), method: :delete %></i>
+                <% else %>
+                    <i class="right material-icons">favorite_border<%=link_to product.favorites.count, product_favorites_path(product.id), method: :post %></i>
+                <% end %>
+              <% end %>
+            </p>
+
             <hr/>
             <%= link_to "詳細", product, :class => "waves-effect waves-light btn" %>
           </div>
