--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -7,9 +7,8 @@
               <span>・</span><%= link_to product[:name], product_path(product.id) %>
                 <span class="right">
                   <%= link_to product_favorites_path(product.id), method: :delete do %>
-                    <span class="basket__delete">&nbsp;&nbsp;<i class="far fa-trash-alt"></i>
+                    <span class="basket__delete">削除 </span>
                   <% end %>
-                </span>
               </span>
             </p>
           <% end %>
