fix upload functional

--- a/app/views/inquiry/thanks.html.erb
+++ b/app/views/inquiry/thanks.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 <div class="newWrap">
   <div class="newTitle">
-    <h3 class="center-align">お問い合わせ：送信しました</h3>
+    <h3 class="center-align">送信しました</h3>
   </div>
   <div class="newContent">
     <p>お問い合わせありがとうございます。</p>
