--- a/app/views/inquiry/confirm.html.erb
+++ b/app/views/inquiry/confirm.html.erb
@@ -6,10 +6,8 @@
   <div class="newContent">
     <%= form_for @inquiry, :url => inquiry_thanks_path do |f| %>
     <div class="row">
-      <div class="col-sm-4">名前</div>
-      <div class="col-sm-8"><%= f.hidden_field :name %><%= @inquiry.name %></div>
-      <div class="col-sm-4">メールアドレス</div>
-      <div class="col-sm-8"><%= f.hidden_field :email %><%= @inquiry.email %></div>
+      <div class="col-sm-4">名前:<%= f.hidden_field :name %><%= @inquiry.name %></div>
+      <div class="col-sm-4">メールアドレス:<%= f.hidden_field :email %><%= @inquiry.email %></div>
       <div class="col-sm-4">お問い合わせ内容</div>
       <div class="col-sm-8"><%= f.hidden_field :message %><%= simple_format(@inquiry.message) %></div>
     </div>
