--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -16,6 +16,7 @@
     <a href="/" class="brand-logo">park gallery</a>
       <ul class="right hide-on-med-and-down" id="nav-mobile">
         <% if current_user.present? %>
+          <li><%= link_to 'Home', root_path %></li>
           <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
         <% end %>
         </ul>
