fix done upload functional

--- a/app/views/inquiry/index.html.erb
+++ b/app/views/inquiry/index.html.erb
@@ -21,7 +21,7 @@
         <div class="col-sm-8"><%= f.text_field :name, class: 'form-control mb-2' %></div>
         <div class="col-sm-4">メールアドレス<span class="text-danger">（必須）</span></div>
         <div class="col-sm-8"><%= f.text_field :email, class: 'form-control mb-2' %></div>
-        <div class="col-sm-4">お問い合わせ内容</div>
+        <div class="col-sm-4">お問い合わせ内容:</div>
         <div class="col-sm-8"><%= f.text_area :message, class: 'form-control mb-2', rows: '6' %></div>
       </div>
       <%= f.submit '確認', class: 'btn btn-block btn-success' %>
